-------------------------------------------------------------------------------
Changes in version 0.95


Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.93

- Added support for morercpthosts.cdb.

- Now defaults to not sending a copy of the nofication.

- Recoded to use iobuf libraries.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.92

- Added support for MIME-encoded attachments.

- Added support for loading an external bounce response message file.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------