@@ -4,7 +4,6 @@
 void oom(void);
 extern int opt_mime;
 extern int opt_msgbytes;
-extern time_t opt_age;
 extern time_t queuelifetime;
 extern const char* me;
 
@@ -15,6 +14,6 @@ long read_int(const char* filename, long dflt);
 
 void load_bounce_body(const char* filename);
 void make_bounce_body(int fd, const char* sender, const char* filename,
-		      const char* remotes, const char* locals);
+		      const char* remotes, const char* locals, time_t age);
 
 #endif
