@@ -1,6 +1,8 @@
 -------------------------------------------------------------------------------
 Changes in version 0.95
 
+- Now supports sending multiple notifications for a single message by
+  allowing multiple message ages to be specified with the "-t" option.
 
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
